@startuml
title Geometry Messages Package Diagram

namespace fast::rf::messages {
  namespace Standard {
    class Covariance6DMsg <<(M,#FFFF00) >>
    class Vector3DMsg <<(M,#FFFF00) >>
  }

  package GeometryMsgs #LightYellow;line:blue {
    struct AccelMsg <<(M,#FFFF00)>> #LimeGreen {
      +string pretty()
      +Vector3DMsg linear
      +Vector3DMsg angular
    }
    struct AccelWithCovarianceMsg <<(M,#FFFF00)>> #LimeGreen {
      +string pretty()
      +double time_stamp
      +AccelMsg accel
      +Covariance6DMsg covariance
    }
    AccelWithCovarianceMsg --> AccelMsg: <<use>>
    AccelWithCovarianceMsg --> Covariance6DMsg: <<use>>
    struct PointMsg <<(M,#FFFF00) >> #LimeGreen {
      +double x
      +double y
      +double z 
    }
    struct OrientationMsg <<(M,#FFFF00) >> #LimeGreen {
      +double roll
      +double pitch
      +double yaw
      +string pretty()
    }
    struct PoseMsg <<(M,#FFFF00)>> #LimeGreen {
      +PointMsg position
      +OrientationMsg orientation

    }
    PoseMsg --> PointMsg: <<use>>
    PoseMsg --> OrientationMsg: <<use>>
    struct PoseWithCovarianceMsg <<(M,#FFFF00)>> #LimeGreen {
      +PoseMsg pose
      +Covariance6DMsg covariance
    }
    PoseWithCovarianceMsg --> Covariance6DMsg: <<use>>
    PoseWithCovarianceMsg --> PoseMsg: <<use>>

    struct TwistMsg <<(M,#FFFF00)>> #LimeGreen {
      +Vector3DMsg linear
      +Vector3DMsg angular
      +string pretty()
    }
    TwistMsg --> Vector3DMsg: <<use>>

    struct TwistWithCovarianceMsg <<(M,#FFFF00)>> #LimeGreen {
      +TwistMsg twist
      +Covariance6DMsg covariance
    }
    TwistWithCovarianceMsg --> TwistMsg: <<use>>
    TwistWithCovarianceMsg --> Covariance6DMsg: <<use>>

    struct OdomMsg <<(M,#FFFF00)>> #LimeGreen {
      +string pretty()
      +double time_stamp
      +PoseWithCovarianceMsg pose
      +TwistWithCovarianceMsg twist
    }
    OdomMsg --> PoseWithCovarianceMsg: <<use>>
    OdomMsg --> TwistWithCovarianceMsg: <<use>>
  }
    
}
@enduml